Add pull request comment in build_spec.yaml

--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -53,6 +53,7 @@ steps:
         ###############################################################
         #                 INTEGRATE FORTIFY SAST                      #
         #                                                             #
+        ##pull request
         # For FORTIFY ON DEMAND uncomment the next line               #
         # bash devops-integrations/oci/fortify-sast-fod.bash
         #                                                             #
