Update FoD release name in workflow configuration

--- a/.github/workflows/fortify_sast_sca.yml
+++ b/.github/workflows/fortify_sast_sca.yml
@@ -73,7 +73,7 @@ jobs:
           FOD_CLIENT_SECRET: ${{secrets.FOD_CLIENT_SECRET}}
           ### Optional configuration
           # FOD_LOGIN_EXTRA_OPTS: --socket-timeout=60s     # Extra 'fcli fod session login' options
-          FOD_RELEASE: SDC-IWA-JAVA:github                 # FoD release name, default: <org>/<repo>:<branch>
+          FOD_RELEASE: Iwa-Java-SDC:github                 # FoD release name, default: <org>/<repo>:<branch>
           # DO_SETUP: true                                 # Setup FoD application, release & static scan configuration
           # SETUP_ACTION: <URL or file>                    # Customize setup action
                                                            # Pass extra options to setup action:
